# gnuplot-ocaml

./: dune-project  gnuplot.opam
examples/: dune
lib/: dune
